--- a/static/css/components/dots.css
+++ b/static/css/components/dots.css
@@ -17,6 +17,7 @@ ul.dot-nav-content-list li:not(.current) {
 div.dot-nav {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 div.dot-nav-dots {
