--- a/templates/index.html
+++ b/templates/index.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta content="opa opa" property="og:title">
-	<meta content="/static/data/meta.jpg" property="og:image">
+	<meta content="/static/assets/trap.jpg" property="og:image">
 	<meta content="А че сюда писать" property="og:description">
 	<meta name="description" content="А че сюда писать">
 	<meta name="theme-color" content="#DB86D3">
 	
 	<title>Cool title</title>
 	
-	<link rel="shortcut icon" href="/static/data/meta.jpg" type="image/jpg">
+	<link rel="shortcut icon" href="/static/assets/icon.png" type="image/png">
 
 	<link rel="stylesheet" type="text/css" href="/static/css/base.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/components/dots.css">
